# MLOPS-CI-CD-MODELS

./: .gitignore  README.md  fr-api-kaniko.yml  rbac.yaml  runner-scale-set.yaml  values-kaniko.yaml  workflow_harbor_local.yaml
.github/runner/: Dockerfile
.github/workflows/: fr-api-kaniko.yml  fr.yml  models-workflow.yaml  models-workflow.yml
.marscode/: deviceInfo.json
mlops/: .gitignore
mlops/APIs/audio_chunks/: .dockerignore  Dockerfile  app.py  config.py  requirements.txt  utils.py
mlops/APIs/doc-ocr/: .dockerignore  .env  Dockerfile  app.py  config.py  document_processor.py  document_to_text_ocr.py  enhanced_document_ocr.py  ocr_processor.py  olmocr.py  requirements.txt  test.py  utils.py
mlops/APIs/docling/: Dockerfile
mlops/APIs/emotion-api/: .env.example  README.md
mlops/APIs/fr-api/: .dockerignore  Dockerfile  README.md  api.py  config.py  docker-compose.yml  env_example  pyproject.toml  requirements.txt  schemas.py  utils.py
mlops/APIs/language-detector/: Dockerfile  app.py  deployment.yaml  requirements.txt
mlops/APIs/logo/: .env  README.md  api.py  config.py  detector.py  env_example  schemas.py  triton_classes_client.py
mlops/APIs/ocr-media/: app.py  config.py  llama_vision.py  olmocr.py  requirements.txt  result.md  schema.py
mlops/APIs/resnet100/: README.md  api.py  config.py  env_example  schemas.py  utils.py
mlops/APIs/scene-api/: .env.example  Dockerfile  README.md  requirements.txt
mlops/APIs/sentiment-api/: .dockerignore  Dockerfile  config.py  env_example  main.py  models.py  prompts.py  requirements.txt  (+1 more)
(+89 files in other folders)
